--- a/package.yaml
+++ b/package.yaml
@@ -22,12 +22,10 @@ dependencies:
   - http-types
   - iproute
   - lens
-  - network
-  - network-simple
   - text
   - time
-  - unix
   - unordered-containers
+  - wreq
 
 library:
   source-dirs: src
