--- a/integration-test/skeleton/package.yaml
+++ b/integration-test/skeleton/package.yaml
@@ -7,16 +7,12 @@ dependencies:
 - pcre-light
 - serverless-haskell
 
-executables:
-  main:
-    main: Main.hs
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+library:
+  source-dirs: src
 
-  apigw:
-    main: ApiGateway.hs
+executables:
+  mylambda:
+    main: Main.hs
     ghc-options:
     - -threaded
     - -rtsopts
